--- a/QuickSum_AI.ipynb
+++ b/QuickSum_AI.ipynb
@@ -86,7 +86,8 @@
         "import streamlit as st\n",
         "from transformers import pipeline\n",
         "from PyPDF2 import PdfReader\n",
-        "from docx import Document"
+        "from docx import Document\n",
+        "from pyngrok import ngrok",
       ]
     },
     {
