--- a/QuickSum_AI.ipynb
+++ b/QuickSum_AI.ipynb
@@ -86,8 +86,7 @@
         "import streamlit as st\n",
         "from transformers import pipeline\n",
         "from PyPDF2 import PdfReader\n",
-        "from docx import Document\n",
-        "from pyngrok import ngrok",
+        "from docx import Document"
       ]
     },
     {
